<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
          android:id="@+id/toolbar"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="?attr/colorPrimary"
          app:elevation="4dp"
          app:popupTheme="@style/Theme.AppCompat.Light"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ScrollView
              android:layout_width="200dp"
              android:layout_below="@id/toolbar"
              android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/spacing"
                android:orientation="vertical">

              <ImageView
                  android:scaleType="centerCrop"
                  android:layout_gravity="center"
                  android:layout_width="@dimen/profile_image"
                  android:id="@+id/img_profile"
                  android:layout_height="@dimen/profile_image"
                  android:contentDescription="@string/photo"/>

              <!-- ID -->
              <TextView
                  style="@style/Text.Sub"
                  android:layout_marginTop="@dimen/spacing"
                  android:layout_width="match_parent"
                  android:text="@string/fid"
                  android:layout_height="wrap_content"/>

              <TextView
                  android:id="@+id/txt_id"
                  style="@style/Text.Title"
                  android:layout_marginTop="@dimen/spacing_xsmall"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"/>

              <!-- Name -->
              <TextView
                  style="@style/Text.Sub"
                  android:layout_marginTop="@dimen/spacing"
                  android:layout_width="match_parent"
                  android:text="@string/name"
                  android:layout_height="wrap_content"/>

              <TextView
                  android:id="@+id/txt_name"
                  style="@style/Text.Title"
                  android:layout_marginTop="@dimen/spacing_xsmall"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"/>

              <!-- E-mail -->
              <TextView
                  style="@style/Text.Sub"
                  android:layout_marginTop="@dimen/spacing"
                  android:layout_width="match_parent"
                  android:text="@string/email"
                  android:layout_height="wrap_content"/>

              <TextView
                  android:id="@+id/txt_email"
                  style="@style/Text.Title"
                  android:layout_marginTop="@dimen/spacing_xsmall"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"/>

              <!-- Gender -->
              <TextView
                  style="@style/Text.Sub"
                  android:layout_marginTop="@dimen/spacing"
                  android:layout_width="match_parent"
                  android:text="@string/gender"
                  android:layout_height="wrap_content"/>

              <TextView
                  android:id="@+id/txt_gender"
                  style="@style/Text.Title"
                  android:layout_marginTop="@dimen/spacing_xsmall"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"/>

              <!-- Birthday -->
              <TextView
                  style="@style/Text.Sub"
                  android:layout_marginTop="@dimen/spacing"
                  android:layout_width="match_parent"
                  android:text="@string/birthday"
                  android:layout_height="wrap_content"/>

              <TextView
                  android:id="@+id/txt_birthday"
                  style="@style/Text.Title"
                  android:layout_marginTop="@dimen/spacing_xsmall"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"/>

            </LinearLayout>

          </ScrollView>

            <ScrollView
                android:layout_width="200dp"
                android:layout_below="@id/toolbar"
                android:layout_height="match_parent"
                android:id="@+id/scrollView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/spacing"
                    android:orientation="vertical" >

                    <ImageView
                        android:scaleType="centerCrop"
                        android:layout_gravity="center"
                        android:layout_width="@dimen/profile_image"
                        android:id="@+id/ticon"
                        android:layout_height="@dimen/profile_image"
                        android:contentDescription="@string/photo" />

                    <TextView
                        style="@style/Text.Sub"
                        android:layout_marginTop="@dimen/spacing"
                        android:layout_width="match_parent"
                        android:text="@string/tid"
                        android:layout_height="wrap_content" />

                    <TextView
                        style="@style/Text.Title"
                        android:id="@+id/tid"
                        android:layout_marginTop="@dimen/spacing_xsmall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        style="@style/Text.Sub"
                        android:layout_marginTop="@dimen/spacing"
                        android:layout_width="match_parent"
                        android:text="@string/tname"
                        android:layout_height="wrap_content" />

                    <TextView
                        style="@style/Text.Title"
                        android:id="@+id/taccount"
                        android:layout_marginTop="@dimen/spacing_xsmall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        style="@style/Text.Sub"
                        android:layout_marginTop="@dimen/spacing"
                        android:layout_width="match_parent"
                        android:text="@string/tfollow"
                        android:layout_height="wrap_content" />

                    <TextView
                        style="@style/Text.Title"
                        android:id="@+id/ntfollow"
                        android:layout_marginTop="@dimen/spacing_xsmall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        style="@style/Text.Sub"
                        android:layout_marginTop="@dimen/spacing"
                        android:layout_width="match_parent"
                        android:text="@string/tfollower"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView" />

                    <TextView
                        style="@style/Text.Title"
                        android:id="@+id/ntfollower"
                        android:layout_marginTop="@dimen/spacing_xsmall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>
            </ScrollView>
        </LinearLayout>

        <TextView
            android:id="@+id/btn_login"
            android:text="@string/login"
            style="@style/Button.Theme"
            android:layout_marginTop="@dimen/spacing_xlarge"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <TextView
          android:id="@+id/btn_twitter"
          android:text="@string/tlogin"
          android:layout_marginTop="@dimen/spacing_xlarge"
          style="@style/Button.Theme"
          android:layout_width="300dp"
          android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </LinearLayout>

</RelativeLayout>
