<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <android.support.v7.widget.Toolbar
      android:id="@+id/toolbar"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/mainColor"
      app:elevation="4dp"
      app:popupTheme="@style/Theme.AppCompat.Light"
      android:clickable="false" />

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:padding="@dimen/spacing"
      android:orientation="vertical"
      android:layout_below="@id/toolbar">

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="Get_Feed"
          android:id="@+id/btn_getfeed"
          android:layout_gravity="center_horizontal"
          style="@style/Button.Theme"
          android:layout_marginTop="@dimen/spacing_large" />

      <TextView
        android:id="@+id/btn_share_dialog"
        android:text="@string/share_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Button.Theme"
          android:layout_marginTop="@dimen/spacing_large" />

    <TextView
        android:id="@+id/btn_share_auto"
        android:text="@string/share_auto"
        android:layout_marginTop="@dimen/spacing_large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Button.Theme"/>

    <TextView
        android:id="@+id/btn_share_photo_auto"
        android:text="@string/share_photo_auto"
        android:layout_marginTop="@dimen/spacing_large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Button.Theme"/>

    <TextView
        android:id="@+id/txt_share_auto_result"
        android:layout_marginTop="@dimen/spacing"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/accent500"
        android:textSize="@dimen/text_large"/>

  </LinearLayout>

</RelativeLayout>
